syntax = "proto3";

package audio.v1;

option go_package = "github.com/romashorodok/stream-source/pb/go/audio/v1;audiopb";

message Audio {
    string audio_id = 1;
    string title = 2;
}

message AudioBucket {
    string audio_bucket_id = 1;
    string bucket = 2;
    string origin_file = 3;
    string manifest = 4;
}

service AudioService {
    rpc ListAudios(ListAudiosRequest) returns (ListAudiosResponse);

    rpc CreateAudioBucket(CreateAudioBucketRequest) returns (CreateAudioBucketResponse);
    rpc BindAudioToBucket(BindAudioToBucketRequest) returns (BindAudioToBucketResponse);
}

message ListAudiosRequest {}

message ListAudiosResponse {
    message AudioWithManifest {
        Audio audio = 1;
        string manifest = 2;
    }

    repeated AudioWithManifest audios = 1;
}

message CreateAudioBucketResponse {
    AudioBucket audio_bucket = 1;
}

message CreateAudioBucketRequest {}

message BindAudioToBucketRequest {
    Audio audio = 1;
    AudioBucket bucket = 2;
}

message BindAudioToBucketResponse {
    AudioBucket bucket = 1;
}
