syntax = "proto2";

package topic.audio.v1;

option go_package = "github.com/romashorodok/stream-source/pb/go/topic/audio/v1;audiotopicpb";

message AudioTranscoded {
    required string manifest_file = 1;
    required string bucket = 2;
    required string bucket_id = 3;

    optional string topic = 4 [default = "audio-transcoded-topic"];
}

